--- a/data/glm_4_1v_thinking.bib
+++ b/data/glm_4_1v_thinking.bib
@@ -1,5 +1,5 @@
 @article{hong2025glm,
-  title={GLM-4.1 V-Thinking: Towards Versatile Multimodal Reasoning with Scalable Reinforcement Learning},
+  title={GLM-4.5V and GLM-4.1V-Thinking: Towards Versatile Multimodal Reasoning with Scalable Reinforcement Learning},
   author={Hong, Wenyi and Yu, Wenmeng and Gu, Xiaotao and Wang, Guo and Gan, Guobing and Tang, Haomiao and Cheng, Jiale and Qi, Ji and Ji, Junhui and Pan, Lihang and others},
   journal={arXiv preprint arXiv:2507.01006},
   year={2025}
